syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_task_definition_log;

message DsTaskDefinitionLogBean {

     int32 id= 1;
     int64 code=2 ;
     optional string  name=3 ;
     int32 version=4 ;
     optional string description=5 ;
     optional int64  project_code= 6;
     optional int32   user_id=7 ;
     optional string  task_type=8 ;
     optional string  task_params=9 ;
     optional int32   flag=10 ;
     optional int32  task_priority=11 ;
     optional string   worker_group=12 ;
     optional int64  environment_code=13 ;
     optional int32   fail_retry_times=14 ;
     optional int32   fail_retry_interval=15 ;
     optional int32   timeout_flag=16 ;
     optional int32   timeout_notify_strategy=17 ;
     optional int32  timeout=18 ;
     optional int32    delay_time=19 ;
     optional string   resource_ids=20 ;
     optional int32   operator=21 ;
     optional int32   task_group_id=22 ;
     optional int32   task_group_priority=23 ;
     optional string    operate_time=24 ;
     optional string   create_time=25 ;
     optional string    update_time=26 ;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsTaskDefinitionLogBeanService {
  rpc ListDsTaskDefinitionLogBeans(ListDsTaskDefinitionLogBeansRequest) returns (ListDsTaskDefinitionLogBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsTaskDefinitionLogBeans"
    };
  }

  rpc GetDsTaskDefinitionLogBean(GetDsTaskDefinitionLogBeanRequest) returns (DsTaskDefinitionLogBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsTaskDefinitionLogBeans/*}"
    };
  }

  rpc CreateDsTaskDefinitionLogBean(CreateDsTaskDefinitionLogBeanRequest) returns (DsTaskDefinitionLogBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsTaskDefinitionLogBeans"
      body: "DsTaskDefinitionLogBean"
    };
  }

  rpc UpdateDsTaskDefinitionLogBean(UpdateDsTaskDefinitionLogBeanRequest) returns (DsTaskDefinitionLogBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsTaskDefinitionLogBean.name=DsTaskDefinitionLogBeans/*}"
      body: "DsTaskDefinitionLogBean"
    };
  }

  rpc DeleteDsTaskDefinitionLogBean(DeleteDsTaskDefinitionLogBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsTaskDefinitionLogBeans/*}"
    };
  }
}

// message DsTaskDefinitionLogBean {
// ! This should be defined elsewhere
// }

message ListDsTaskDefinitionLogBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsTaskDefinitionLogBeansResponse {
  // The field name should match the noun "DsTaskDefinitionLogBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsTaskDefinitionLogBean DsTaskDefinitionLogBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsTaskDefinitionLogBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsTaskDefinitionLogBeanRequest {
  // The parent resource name where the DsTaskDefinitionLogBean is to be created.
  string parent = 1;

  // The DsTaskDefinitionLogBean id to use for this DsTaskDefinitionLogBean.
  string DsTaskDefinitionLogBean_id = 2;

  // The DsTaskDefinitionLogBean resource to create.
  // The field name should match the Noun in the method name.
  DsTaskDefinitionLogBean DsTaskDefinitionLogBean = 3;
}

message UpdateDsTaskDefinitionLogBeanRequest {
  // The DsTaskDefinitionLogBean resource which replaces the resource on the server.
  DsTaskDefinitionLogBean DsTaskDefinitionLogBean = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsTaskDefinitionLogBeanRequest {
  // The resource name of the DsTaskDefinitionLogBean to be deleted.
  string name = 1;
}
